--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section id="showcase">
         <div class="container">
           <h1>Welcome</h1>
-          <p>Welcome to my website, I hope this will been helpful.</p>
+          <p>Welcome to my website, I hope this will be helpful.</p>
         </div>
       </section>
       <section id="main-area">
