--- a/index.html
+++ b/index.html
@@ -46,25 +46,10 @@
         </div>
       </section>
       <section id="main-area">
-        <h2>Breaking from Shackles of Fear</h2>
+        <h2>The Forward Virtual Assistant</h2>
         <p>
-          After realizing that, I have lived through three decades with nothing
-          to show; I am stupefied. My mind works day and night; making
-          questionably decisions because of the fear of unknown, maybe I am
-          paranoid. Precisely, I cannot trust my risk taking strategy anymore. I
-          doubt every step I take, presuming they are missteps taking me far and
-          farther away from my dream. I shall overcome, I shall stand tall, but
-          holding on is out of question. Perhaps, I should risk and fail; the
-          good news is I will be some steps ahead rather than staying put for I
-          cannot know what lie on the other end. I will risk until there is no
-          risk to take anymore. The more daring the risk is the more alive I
-          will feel, the more life will be worth the grind. False optimism could
-          be my pace moderator though not my all time tools for progression.
-          More often than not, I will ignore it and make rushed decisions, yearn
-          for hurried outcomes. I must take the meticulous actions now because
-          delaying them until everything is fine might be a futile wait. Time is
-          not on my side. I must act. I must ignore the dreadful feeling. I must
-          break from the shackles of fear and act.
+          At TFVA we believe in offering the best to our customers. Try our services; Simple website building, web research, SEO anlysis and email management using google,
+          and you will never regret.
         </p>
       </section>
     </div>
