--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         </p>
       </section>
     </div>
-    <footer id="my-footer">Linda &copy2022;</footer>
+    <footer id="my-footer">TFVA &copy2022;</footer>
   </body>
 </html>
