--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="main-area">
         <h2>The Forward Virtual Assistant</h2>
         <p>
-          At TFVA we believe in offering the best to our customers. Try our services; Simple website building, web research, SEO anlysis and email management using google,
+          At TFVA we believe in offering the best to our customers. Try our services; Simple website building, web research, SEO analysis and email management using google,
           and you will never regret.
         </p>
       </section>
